--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,39 @@
 {
-  "extends": "next/core-web-vitals"
+	"env": {
+		"browser": true,
+		"es2021": true,
+		"node": true,
+		"jest": true
+	},
+	"extends": [
+		"plugin:react/recommended",
+		"airbnb",
+		"plugin:@typescript-eslint/recommended",
+		"prettier"
+	],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
+	"plugins": [
+		"react",
+		"@typescript-eslint",
+		"prettier"
+	],
+	"rules": {
+		"prettier/prettier": "error",
+		"react/prop-types": "off",
+		"react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }],
+		"react/function-component-definition": [1, {
+			"namedComponents": "arrow-function"
+		}],
+		"react/react-in-jsx-scope": "off",
+		"react/jsx-props-no-spreading": [1, {
+			"custom": "ignore"
+		}]
+	}
 }
