feat: initial header layout

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,16 @@
 		"react/jsx-props-no-spreading": [1, {
 			"custom": "ignore"
 		}],
-		"import/prefer-default-export": "off"
+		"import/prefer-default-export": "off",
+		"import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+   ]
 	}
 }
